[DEV-1] - with some designs

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.button {
+    width: 150px;
+}
+
 @layer base {
     @font-face {
         font-family: "Roboto";
